fixed the problem of images and icons

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- linked normalize -->
-    <link rel="stylesheet" href="/11111111/Template two(2222)/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- icons -->
-    <link rel="stylesheet" href="/11111111/Template two(2222)/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- style -->
-    <link rel="stylesheet" href="/11111111/Template two(2222)/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="/11111111/Template two(2222)/css/style.css"> -->
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
