test fixed image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/all.min.css">
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="/11111111/Template two(2222)/css/style.css"> -->
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +20,7 @@
     <div class="header">
         <div class="container">
             <a href="#" class="logo">
-                <img src="/11111111/Template two(2222)/logo/logo (1).png" alt="logo">
+                <img src="logo/logo (1).png" alt="logo">
             </a>
             <nav>
                 <i class="fa-solid fa-bars icon-one"></i>
