--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
      <!-- Start video -->
      <div class="video">
                 <video autoplay loop muted>
-                    <source src="./logo/awesome-video.mp4" type="video/mp4">
+                    <source src="logo/awesome-video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             <div class="text">
