--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     <div class="social">
         <div class="container">
             <div class="all">
-                <img src="/11111111/Template two(2222)/logo/logo (1).png" alt="logo">
+                <img src="logo/logo (1).png" alt="logo">
                 <h3>we are social</h3>
                 <div class="section-icons">
                     <i class="fab fa-facebook-f"></i>
